--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
@@ -21,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
