--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-cookie": "^6.1.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.28"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.38",
     "@types/faker": "^6.6.9",
+    "@types/js-cookie": "^3.0.4",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
